Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-3411

Can't turn off x-reconnect-on-limit-exceeded

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 0.10, 0.12
    • 0.13
    • C++ Client
    • None

    Description

      The messaging API in c++ supports treating a resource limit exception by reconnecting after a backoff period. However that could be previously turned off by the x-reconnect-on-limit-exceeded option. Unfortunately I accidentally removed that option in the refactoring of r1078075 and it needs to be restored.

      Attachments

        Activity

          People

            gsim Gordon Sim
            gsim Gordon Sim
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: