QPID-3411: Restore x-reconnect-on-limit-exceeded option

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk/qpid@1156327 13f79535-47bb-0310-9956-ffa450edef68